# Rex

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README  README.md  _build.py  _generate.py  _rex.py  _setup.py  _test.py  build.py  ci.bat  clang_tidy_log.txt  configure.bat  configure_windows_update.bat  create_project.py  generate.py  generate_project_files.bat  repository_directories.py  run_all.bat  run_directx.bat  run_opengl.bat  setup.py  validate.bat
src/: CMakeLists.txt
src/applications/: CMakeLists.txt
src/applications/sandbox/: CMakeLists.txt
src/applications/sandbox/include/core/: application.h
src/applications/sandbox/resources/: sandbox.manifest
src/applications/sandbox/src/core/: application.cpp
src/libraries/: CMakeLists.txt
src/libraries/core/: CMakeLists.txt
src/libraries/core/include/: rex_core_global.h  rex_core_pch.h  rex_debug.h
src/libraries/core/include/core/: coreapplication.h  deltatime.h  entrypoint.h  input.h  keycodes.h  keynames.h  mousecodes.h  window.h
src/libraries/core/include/events/: event.h  eventcategory.h  eventdispatcher.h  eventtype.h  genericevent.h  keyevent.h  keypressedevent.h  keyreleasedevent.h  mousebuttonevent.h  mousebuttonpressedevent.h  mousebuttonreleasedevent.h  mouseevent.h  mousemovedevent.h  mousescrolledevent.h  nativeevent.h  windowclosedevent.h  windowevent.h  windowresizedevent.h
src/libraries/core/include/events/input/: inputevent.h  keydown.h  keyevent.h  keytyped.h  keyup.h  mousedown.h  mouseevent.h  mousemove.h  mousescroll.h  mousescrollmeta.h  mouseup.h
src/libraries/core/include/events/window/: windowactivated.h  windowclose.h  windowdeactivated.h  windowevent.h  windowopen.h  windowresize.h
src/libraries/core/resources/: Core.aps  core.manifest
src/libraries/core/src/: rex_core_pch.cpp
src/libraries/core/src/core/: coreapplication.cpp  keycodes.cpp
src/libraries/core/src/events/: event.cpp  eventcategory.cpp  eventdispatcher.cpp  eventtype.cpp  keyevent.cpp  keypressedevent.cpp  keyreleasedevent.cpp  mousebuttonevent.cpp  mousebuttonpressedevent.cpp  mousebuttonreleasedevent.cpp  mouseevent.cpp  mousemovedevent.cpp  mousescrolledevent.cpp  windowclosedevent.cpp  windowevent.cpp  windowresizedevent.cpp
src/libraries/core/src/events/input/: inputevent.cpp  keydown.cpp  keyevent.cpp  keytyped.cpp  keyup.cpp  mousedown.cpp  mouseevent.cpp  mousemove.cpp  mousescroll.cpp  mouseup.cpp
src/libraries/core/src/events/window/: windowactivated.cpp  windowclose.cpp  windowdeactivated.cpp  windowevent.cpp  windowopen.cpp  windowresize.cpp
src/libraries/diagnostics/: CMakeLists.txt
src/libraries/diagnostics/include/: logger.h  loglevel.h  rex_diagnostics_defines.h.in  rex_diagnostics_global.h  rex_diagnostics_pch.h
src/libraries/diagnostics/resources/: diagnostics.manifest  resource.h
src/libraries/diagnostics/src/: logger.cpp  loglevel.cpp  rex_diagnostics_pch.cpp
src/libraries/engine/: CMakeLists.txt
src/libraries/engine/include/: rex_engine_global.h  rex_engine_pch.h
src/libraries/engine/include/config/: applicationconfig.h  config.h  contextconfig.h  inputconfig.h  shaderconfig.h
src/libraries/engine/include/core/: consoleapplication.h  graphicalapplication.h  imguilayer.h  layer.h  layerstack.h  windowconfig.h
src/libraries/engine/src/: rex_engine_pch.cpp
src/libraries/engine/src/core/: consoleapplication.cpp  graphicalapplication.cpp  imguilayer.cpp  layer.cpp  layerstack.cpp
src/libraries/graphics/: CMakeLists.txt
src/libraries/graphics/include/: rex_graphics_global.h  rex_graphics_pch.h
src/libraries/graphics/include/api/opengl/core/: glindexbuffer.h  glrendererapi.h  glshader.h  (+2 more)
src/libraries/graphics/include/core/: buffer.h  bufferlayout.h  context.h  indexbuffer.h  mesh.h  orthographiccamera.h  renderer.h  rendererapi.h  shader.h  shaderdatatype.h  vertexarray.h  vertexbuffer.h
src/libraries/graphics/include/core/commands/: clearcommand.h  drawcommand.h  rendercommand.h
src/libraries/graphics/include/resources/: materialid.h  materialinterface.h
src/libraries/graphics/opengl/: CMakeLists.txt
src/libraries/graphics/opengl/include/: rex_graphics_defines.h.in  rex_graphics_global.h
src/libraries/graphics/opengl/include/core/: glcontext.h
src/libraries/graphics/opengl/resources/: Graphics.aps
src/libraries/graphics/opengl/src/: rex_graphics_pch.cpp
src/libraries/graphics/opengl/src/core/: glcontext.cpp
src/libraries/graphics/resources/: graphics.manifest
src/libraries/graphics/src/core/: bufferlayout.cpp  context.cpp  indexbuffer.cpp  mesh.cpp  orthographiccamera.cpp  renderer.cpp  rendererapi.cpp  shader.cpp  vertexarray.cpp  vertexbuffer.cpp
src/libraries/graphics/src/core/commands/: clearcommand.cpp  drawcommand.cpp
src/libraries/graphics/src/resources/: materialid.cpp  materialinterface.cpp
src/libraries/platform/: CMakeLists.txt
src/libraries/platform/windows/: CMakeLists.txt
src/libraries/platform/windows/include/: rex_platform_defines.h  rex_platform_defines.h.in  rex_platform_global.h  rex_platform_pch.h
src/libraries/platform/windows/include/core/: win32application.h  win32input.h  win32inputcontroller.h  win32window.h
src/libraries/platform/windows/include/events/: win32eventprocessor.h  win32iohelper.h  win32messageparameters.h  win32nativeevent.h
src/libraries/platform/windows/resources/: platform.manifest
src/libraries/platform/windows/src/: rex_platform_pch.cpp
src/libraries/platform/windows/src/core/: win32application.cpp  win32input.cpp  win32inputcontroller.cpp  win32window.cpp
src/libraries/platform/windows/src/events/: win32eventprocessor.cpp  win32iohelper.cpp
src/libraries/utilities/: CMakeLists.txt
src/libraries/utilities/include/: rex_utilities_global.h
src/libraries/utilities/include/enums/: yesnoenum.h
src/libraries/utilities/include/helpers/: defines.h
src/libraries/utilities/include/math/: bounds.h  point.h
src/libraries/utilities/include/patterns/: singleton.h
src/libraries/utilities/include/string/: hash.h
src/libraries/utilities/resources/: utilities.manifest
(+3531 files in other folders)
